--- a/client/src/index.css
+++ b/client/src/index.css
@@ -78,3 +78,23 @@
     justify-content: center;
     align-items: center;
 }
+
+
+input {
+    appearance: none;
+}
+
+/* .my-masonry-grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: auto;
+}
+
+.my-masonry-grid_column {
+    background-clip: padding-box;
+} */
+
+.my-masonry-grid_column > div {
+    margin-bottom: 20px;
+}
